##################################################
#                                                #
# Main CMakeLists for F1 applications.           #
#                                                #
# Author : linshunda, linshunda@tcl.com          #
##################################################
set(PROJECT_SOURCE_DIR_APPLICATIONS ${PROJECT_DIR_INTEGRATED}/client)

#add_subdirectory(request)
#add_subdirectory(datamanage)
#add_subdirectory(impl)
#add_subdirectory(interface)
#add_subdirectory(interface_tmp)


