#add_subdirectory(linein)
#add_subdirectory(pvr)
#add_subdirectory(dm_channel)
#add_subdirectory(power)
#add_subdirectory(booking)
#add_subdirectory(satellite)
#add_subdirectory(tcli_test)
#add_subdirectory(atv_scan)
#add_subdirectory(toolsets)
#add_subdirectory(zoomTest)
#add_subdirectory(audioTest)