##################################################
#                                                #
# Main CMakeLists               .                #
#                                                #
# Author : ganyue, gany@tcl.com                  #
##################################################

add_subdirectory(property)
add_subdirectory(tcli)
add_subdirectory(tcli_server)
