##################################################
#                                                #
# CMakeLists for F1 fpi_route service src.                 #
#                                                #
# Author : linshunda, linshunda@tcl.com          #
##################################################
set(PROJECT_SOURCE_DIR_FPI_ROUTE_SERVICE_SRC ${PROJECT_SOURCE_DIR_FPI_ROUTE_SERVICE}/src )

#if(COMPILE_ROUTE_SCOMMON)
#	ADD_SUBDIRECTORY(common)
#endif(COMPILE_ROUTE_SCOMMON)

#ADD_SUBDIRECTORY(service_utility)
	
#ADD_SUBDIRECTORY(service_socket)


