INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

#SERVER for CALLBACKTEST
set(SAMPLE_CALLBACKTEST_SRC_SERVICE
   ${CMAKE_CURRENT_SOURCE_DIR}/callback_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_callback_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_test_main.c
)

ADD_EXECUTABLE(CALLBACKTESTService ${SAMPLE_CALLBACKTEST_SRC_SERVICE})
set_target_properties(CALLBACKTESTService PROPERTIES COMPILE_DEFINITIONS "BINDER_SERVICE")
ADD_DEPENDENCIES(CALLBACKTESTService libbinderservicemanager.a libStandaloneBinderS.a libAndroidToolsetsS.a)
TARGET_LINK_LIBRARIES(CALLBACKTESTService libStandaloneBinderS.a libbinderservicemanager.a libAndroidToolsetsS.a)
TARGET_LINK_LIBRARIES(CALLBACKTESTService ${SBINDER_PLTFORM_LINK_LIBRARIES})

#CLIENT for CALLBACKTEST
set(SAMPLE_CALLBACKTEST_SRC_CLIENT
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_callback_module.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/remote_test_main.c
)

ADD_EXECUTABLE(CALLBACKTESTClient ${SAMPLE_CALLBACKTEST_SRC_CLIENT})
set_target_properties(CALLBACKTESTClient PROPERTIES COMPILE_DEFINITIONS "BINDER_CLIENT")
ADD_DEPENDENCIES(CALLBACKTESTClient libbinderservicemanager.a libStandaloneBinderS.a libAndroidToolsetsS.a)
TARGET_LINK_LIBRARIES(CALLBACKTESTClient libStandaloneBinderS.a libbinderservicemanager.a libAndroidToolsetsS.a)
TARGET_LINK_LIBRARIES(CALLBACKTESTClient ${SBINDER_PLTFORM_LINK_LIBRARIES})
